Migrate to queryable store
Squash commits of branch feature/queryable:

- Bootstrap usage of queryable store

- Adapt old update step

- Fix test

- Add update step

- Read types from store

- Add unit test

- Fix wording

- Add scheduled task for clean-up

- Clean-up store at startup

- Make CRON configurable

- Re-schedule on cron change

- Clean up

- Add logging

- Rename "category" to "kind"

- Add translations

- Heed review comments

- Heed Sonar comments

- Rename storeFactory in queryableStoreFactory

- Add unit test for clean up task

- Add license